# ComputerClubScheduler

./: CMakeLists.txt  Event.hpp  InputParser.cpp  InputParser.hpp  InvalidFormatException.hpp  Logger.cpp  Logger.hpp  README.md  TableScheduler.cpp  TableScheduler.hpp  main.cpp
.github/workflows/: cpp.yml
tests/: CMakeLists.txt  testYadroTask.cpp
